--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "osrs ge tracker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "node app.js"
   },
   "author": "samuel chen",
   "license": "ISC",
