--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "osrs ge tracker",
   "main": "index.js",
   "scripts": {
-    "start" : "node app.js"
+    "start": "node app.js"
   },
   "author": "samuel chen",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "client-sessions": "^0.8.0",
+    "dotenv": "^8.1.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "jsdom": "^15.1.1",
