--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "samuel chen",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "client-sessions": "^0.8.0",
     "dotenv": "^8.1.0",
